Added Login, Profile view, Profile db and handler, with some security measures
