# service/api/api-handler.go
@@ -10,6 +10,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/", rt.getHelloWorld)
 	rt.router.GET("/context", rt.wrap(rt.getContextReply))
 	rt.router.POST("/session", rt.SessionHandler)
+	rt.router.GET("/users/:username", rt.GetUserHandler)
 
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
